--- a/android/build.gradle
+++ b/android/build.gradle
@@ -20,7 +20,7 @@ rootProject.allprojects {
 
         flatDir {
             dirs project(':flutter_zoom_sdk').file('libs')
-            //dirs "${rootProject.projectDir}/libs"
+//            dirs "${rootProject.projectDir}/libs"
         }
     }
 }
@@ -55,7 +55,7 @@ dependencies {
 //    implementation 'androidx.recyclerview:recyclerview:1.2.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'com.google.android.material:material:1.8.0-alpha02'
-    implementation 'com.google.android:flexbox:2.0.1'
+//    implementation 'com.google.android:flexbox:2.0.1'
 
     implementation 'com.google.code.gson:gson:2.10'
     implementation 'com.github.bumptech.glide:annotations:4.14.2'
