--- a/android/build.gradle
+++ b/android/build.gradle
@@ -51,30 +51,31 @@ android {
 
 
 dependencies {
-//    implementation 'androidx.multidex:multidex:2.0.1'
     implementation 'androidx.appcompat:appcompat:1.5.1'
-////    implementation 'androidx.recyclerview:recyclerview:1.2.1'
-//    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
-//    implementation 'com.google.android.material:material:1.8.0-alpha02'
-//    implementation 'com.google.android:flexbox:2.0.1'
-//
-//    implementation 'com.google.code.gson:gson:2.10'
-//    implementation 'com.github.bumptech.glide:annotations:4.14.2'
-//    implementation 'com.github.bumptech.glide:glide:4.14.2'
-//
-//    implementation "androidx.security:security-crypto:1.1.0-alpha04"
-//    implementation "com.google.crypto.tink:tink-android:1.7.0"
-//
-//    implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.1.0"
-//    implementation "com.google.android.exoplayer:exoplayer-core:2.18.1"
-//    implementation "com.google.android.exoplayer:exoplayer-ui:2.18.1"
+    implementation 'androidx.multidex:multidex:2.0.1'
+//    implementation 'androidx.recyclerview:recyclerview:1.2.1'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+    implementation 'com.google.android.material:material:1.8.0-alpha02'
+    implementation 'com.google.android:flexbox:2.0.1'
+    implementation "com.airbnb.android:lottie:5.2.0"
+
+    implementation 'com.google.code.gson:gson:2.10'
+    implementation 'com.github.bumptech.glide:annotations:4.14.2'
+    implementation 'com.github.bumptech.glide:glide:4.14.2'
+
+    implementation "androidx.security:security-crypto:1.1.0-alpha04"
+    implementation "com.google.crypto.tink:tink-android:1.7.0"
+
+    implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.1.0"
+    implementation "com.google.android.exoplayer:exoplayer-core:2.18.1"
+    implementation "com.google.android.exoplayer:exoplayer-ui:2.18.1"
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.4'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.0'
 
-//    api(name: 'commonlib', ext: 'aar')
-//    api(name: 'mobilertc', ext: 'aar')
-    implementation project(':commonlib')
-    implementation project(':mobilertc')
+    implementation(name: 'commonlib', ext: 'aar')
+    implementation(name: 'mobilertc', ext: 'aar')
+//    implementation project(':commonlib')
+//    implementation project(':mobilertc')
 }
