--- a/android/build.gradle
+++ b/android/build.gradle
@@ -29,6 +29,7 @@ apply plugin: 'com.android.library'
 
 android {
     compileSdkVersion 33
+    buildToolsVersion "30.0.3"
 
     defaultConfig {
         minSdkVersion 21
