--- a/.gitignore
+++ b/.gitignore
@@ -40,6 +40,7 @@
 **/android/gradlew.bat
 **/android/local.properties
 **/android/**/GeneratedPluginRegistrant.java
+**/android/libs/
 
 # iOS/XCode related
 **/ios/**/*.mode1v3
@@ -74,3 +75,7 @@
 !**/ios/**/default.pbxuser
 !**/ios/**/default.perspectivev3
 !/packages/flutter_tools/test/data/dart_dependencies_test/**/.packages
+
+#fvm
+.fvm/flutter_sdk
+
