--- a/example/android/build.gradle
+++ b/example/android/build.gradle
@@ -13,6 +13,8 @@ allprojects {
     repositories {
         google()
         mavenCentral()
+
+        maven { url = rootProject.file('libs') }
     }
 }
 
